tests/valid/namespace-nested.nyx
namespace outer:
    namespace inner:
        fn helper():
            pass
