tests/invalid/dedent-to-invalid-level.nyx
fn outer():
    fn inner():
        pass
   pass
